     [ssh.c]
     ignore SIGPIPE in multiplex client mode - we can receive this if the
     server runs out of fds on us midway. Report and patch from
     gregory_shively AT fanniemae.com
   - djm@cvs.openbsd.org 2008/01/19 22:04:57
     [sftp-client.c]
     fix remote handle leak in do_download() local file open error path;
     report and fix from sworley AT chkno.net

20080119
 - (djm) Silence noice from expr in ssh-copy-id; patch from
   mikel AT mikelward.com
 - (djm) Only listen for IPv6 connections on AF_INET6 sockets; patch from
   tsr2600 AT gmail.com

20080102
 - (dtucker) [configure.ac] Fix message for -fstack-protector-all test.

20080101
 - (dtucker) OpenBSD CVS Sync
   - dtucker@cvs.openbsd.org 2007/12/31 10:41:31
     [readconf.c servconf.c]
     Prevent strict-aliasing warnings on newer gcc versions.  bz #1355, patch
     from Dmitry V. Levin, ok djm@
   - dtucker@cvs.openbsd.org 2007/12/31 15:27:04
     [sshd.c]
     When in inetd mode, have sshd generate a Protocol 1 ephemeral server
     key only for connections where the client chooses Protocol 1 as opposed
     to when it's enabled in the server's config.  Speeds up Protocol 2
     connections to inetd-mode servers that also allow Protocol 1.  bz #440,
     based on a patch from bruno at wolff.to, ok markus@
   - dtucker@cvs.openbsd.org 2008/01/01 08:47:04
     [misc.c]
     spaces -> tabs from my previous commit
   - dtucker@cvs.openbsd.org 2008/01/01 09:06:39
     [scp.c]
     If scp -p encounters a pre-epoch timestamp, use the epoch which is
     as close as we can get given that it's used unsigned.  Add a little
     debugging while there.  bz #828, ok djm@
   - dtucker@cvs.openbsd.org 2008/01/01 09:27:33
     [sshd_config.5 servconf.c]
     Allow PermitRootLogin in a Match block.  Allows for, eg, permitting root
     only from the local network.  ok markus@, man page bit ok jmc@
   - dtucker@cvs.openbsd.org 2008/01/01 08:51:20
     [moduli]
     Updated moduli file; ok djm@

20071231