@@ -23,6 +23,12 @@
      [sftp-client.c]
      fix remote handle leak in do_download() local file open error path;
      report and fix from sworley AT chkno.net
+   - djm@cvs.openbsd.org 2008/01/19 22:22:58
+     [ssh-keygen.c]
+     when hashing individual hosts (ssh-keygen -Hf hostname), make sure we
+     hash just the specified hostname and not the entire hostspec from the
+     keyfile. It may be of the form "hostname,ipaddr", which would lead to
+     a hash that never matches. report and fix from jp AT devnull.cz
 
 20080119
  - (djm) Silence noice from expr in ssh-copy-id; patch from
@@ -3551,4 +3557,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4824 2008/02/10 11:23:41 djm Exp $
+$Id: ChangeLog,v 1.4825 2008/02/10 11:24:30 djm Exp $
